--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>My collections at MS edge</h1>
+    <h2>Rockfellar Bio</h2>
+    <h2>Datasets </h2>
     <h2>YouTubeDownload:-</h2>
     <h2>birds</h2>
     <h2>Dr Lu Udemy reminder of python code</h2>
@@ -33,7 +35,22 @@
     <h2>partition&os install</h2>
     <h2>anaconda</h2>
     <h2>Python download sites</h2>
-    <h2></h2>
+    <h2>UDemy_Greatlearning sites</h2>
+    <h2>amazon kindle</h2>
+    <h2>PAY AFTER JOB PROGRAMMS</h2>
+    <h2>hackanews</h2>
+    <h2>free NAS</h2>
+    <h2>wify file trnsfr</h2>
+    <h2>CDAC</h2>
+    <h2>ms excel</h2>
+    <h2>Learn Microsoft</h2>
+    <h2>Tableau</h2>
+    <h2>Subscription Microsoft 365 Personal</h2>
+    <h2>Oracle DB</h2>
+    <h2>webnairs IT</h2>
+    <h2>New collection (1)</h2>
+    <h2>DBZ</h2>
+    <h2>New collection</h2>
     <h2></h2>
     <h2></h2>
 </body>
