--- a/main/index.html
+++ b/main/index.html
@@ -8,16 +8,16 @@
 <body>
     <h1>My collections at MS edge</h1>
     <h2>Rockfellar Bio</h2>
-        <a href="https://www.youtube.com/watch?v=uvNkdAggUGU">Discord: The Most Evil Business In The World - YouTube</a>
-        <a href="">People Are Becoming Millionaires From Snapchat... THIS Is How</a>
-        <a href="">The Murderous Rise of Russia's Billionaires (Movie)</a>
-        <a href="">How Jake Tran broke the YouTube algorithm</a>
-        <a href="">Everything is a lie, including this video.</a>
-        <a href="">A Story of Trillionaires, Empires &amp; The Richest Man Ever</a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="https://www.youtube.com/watch?v=uvNkdAggUGU">Discord: The Most Evil Business In The World - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=XnRDE854dDY">People Are Becoming Millionaires From Snapchat... THIS Is How</a> <br>
+        <a href="https://www.youtube.com/watch?v=tveVWnS36Nk">The Murderous Rise of Russia's Billionaires (Movie)</a> <br>
+        <a href="https://www.youtube.com/watch?v=R8EyUfd0_5M">How Jake Tran broke the YouTube algorithm</a> <br>
+        <a href="https://www.youtube.com/watch?v=HErV0qAzbZE">Everything is a lie, including this video.</a> <br>
+        <a href="https://www.youtube.com/watch?v=2IV8RVDkHoM">A Story of Trillionaires, Empires &amp; The Richest Man Ever</a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
     <h2>Datasets </h2>
     <h2>YouTubeDownload:-</h2>
     <h2>birds</h2>
