--- a/main/index.html
+++ b/main/index.html
@@ -14,6 +14,20 @@
         <a href="https://www.youtube.com/watch?v=R8EyUfd0_5M">How Jake Tran broke the YouTube algorithm</a> <br>
         <a href="https://www.youtube.com/watch?v=HErV0qAzbZE">Everything is a lie, including this video.</a> <br>
         <a href="https://www.youtube.com/watch?v=2IV8RVDkHoM">A Story of Trillionaires, Empires &amp; The Richest Man Ever</a> <br>
+        <a href="https://www.youtube.com/watch?v=EvIUCe6gSbo">How To Make Money From The Stock Market (Beginners)</a> <br>
+        <a href="https://www.youtube.com/watch?v=QPPzkDFnyX0">Why Samsung Owns EVERYTHING: The Dark Truth</a> <br>
+        <a href="https://www.youtube.com/watch?v=ISIjlRExdpE">The Uber Story: Fraud, Betrayal, Death &amp; Cars</a> <br>
+        <a href="https://www.youtube.com/watch?v=hpI8PSY8eOM">The INSANE Reason That Yahoo! Lost Everything</a> <br>
+        <a href="https://www.youtube.com/watch?v=fsfoqdqyykI">The Most Illegal Business In The World: Silk Road</a> <br>
+        <a href="https://www.youtube.com/watch?v=tiVSpUvQyHc">Snapchat: The Ghost That Haunts Zuckerberg</a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
+        <a href=""></a> <br>
         <a href=""></a> <br>
         <a href=""></a> <br>
         <a href=""></a> <br>
