--- a/main/index.html
+++ b/main/index.html
@@ -20,18 +20,30 @@
         <a href="https://www.youtube.com/watch?v=hpI8PSY8eOM">The INSANE Reason That Yahoo! Lost Everything</a> <br>
         <a href="https://www.youtube.com/watch?v=fsfoqdqyykI">The Most Illegal Business In The World: Silk Road</a> <br>
         <a href="https://www.youtube.com/watch?v=tiVSpUvQyHc">Snapchat: The Ghost That Haunts Zuckerberg</a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
-        <a href=""></a> <br>
+        <a href="https://www.youtube.com/watch?v=9YAc7ohAFGg">Why You've Never Heard of Twitter's Real Creator</a> <br>
+        <a href="https://www.youtube.com/watch?v=4MQ1JDy7uM4">How To Become a YouTube Millionaire</a> <br>
+        <a href="https://www.youtube.com/watch?v=AJeVN7dZV7Y">Why Jeff Bezos Owns Everything...</a> <br>
+        <a href="https://www.youtube.com/watch?v=-q8nIhhwkVs">The Unicorn Hunter: The Craziest Billionaire EVER</a> <br>
+        <a href="https://www.youtube.com/watch?v=djk159kLBwA">(128) The INSANE Truth About TikTok - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=aJLdLb9dwAY">How MagnatesMedia Almost Got DELETED</a> <br>
+        <a href="https://www.youtube.com/watch?v=QJh1LkOM4KY">The INSANE Story of Domino's Pizza</a> <br>
+        <a href="https://www.youtube.com/watch?v=FHr1WnAn-kU">(128) The Man Who Robbed An Entire Country - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=gHXaUDx7P0Y">How A Kid With $0 Created Nike</a> <br>
+        <a href="https://www.youtube.com/watch?v=v2OYxD_7uuI">The Homeless Teen Who Created Louis Vuitton</a> <br>
+        <a href="https://www.youtube.com/watch?v=FQd5bo9nIZs">How WhatsApp Makes Money: The INSANE Story of WhatsApp</a> <br>
+        <a href="https://www.youtube.com/watch?v=UXZzyKTsBMw">Why Netflix is Collapsing: The Truth About Netflix's Empire</a> <br>
+        <a href="https://www.youtube.com/watch?v=ELu8y6eK-0g">The Disturbing History of Coca-Cola</a> <br>
+        <a href="https://www.youtube.com/watch?v=WQN2Gcn7PMg">(128) How James Jani Beat The YouTube Algorithm (Documentary) - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=4zFi8LuZz50">The Poor Boy Who Created Honda</a> <br>
+        <a href="https://www.youtube.com/watch?v=E2dkoYWF4RY">Theranos: The Most Evil Business In The World</a> <br>
+        <a href="https://www.youtube.com/watch?v=kT9IwOV9LT0">The Bankrupt Child That Created Rolls-Royce</a> <br>
+        <a href="https://www.youtube.com/watch?v=FPyTnKkqovE">What REALLY Happened To Jack Ma &amp; Alibaba?</a> <br>
+        <a href="https://www.youtube.com/watch?v=HMgpUqugtOU">(128) Nestlé's Darkest Secret: The Disturbing Truth - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=B8d4uqQjk6o">(128) Levels of Wealth: Inside The Secret Lives of The Ultra-Rich - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=MhspjNiER9Q">(128) The CRAZY Truth About McDonald's - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=6jv98VfM3vQ">(128) The Untold Truth of Instagram - The INSANE Full Story - YouTube</a> <br>
+        <a href="https://www.youtube.com/watch?v=51fWzJ-A5w4">(128) The Secret Chinese Company That Owns Everything - YouTube</a> <br>
+
     <h2>Datasets </h2>
     <h2>YouTubeDownload:-</h2>
     <h2>birds</h2>
