--- a/main/index.html
+++ b/main/index.html
@@ -45,6 +45,10 @@
         <a href="https://www.youtube.com/watch?v=51fWzJ-A5w4">(128) The Secret Chinese Company That Owns Everything - YouTube</a> <br>
 
     <h2>Datasets </h2>
+    <a href=" https://www.kaggle.com/datasets"> Find Open Datasets and Machine Learning Projects | Kaggle </a> <br>
+    <a href=" https://www.mygreatlearning.com/blog/free-download-datasets/"> Free Datasets download for Analytics | Download Datasets for Analytics</a> <br>
+    <a href=" https://www.mygreatlearning.com/blog/free-download-datasets/#optin-monster-shortcode-idon5zeo6dhlsfvucxew7y"> Free Datasets download for Analytics | Download Datasets for Analytics </a> <br>
+    
     <h2>YouTubeDownload:-</h2>
     <h2>birds</h2>
     <h2>Dr Lu Udemy reminder of python code</h2>
