--- a/main/index.html
+++ b/main/index.html
@@ -47,11 +47,21 @@
     <h2>Datasets </h2>
         <a href=" https://www.kaggle.com/datasets"> Find Open Datasets and Machine Learning Projects | Kaggle </a> <br>
         <a href=" https://www.mygreatlearning.com/blog/free-download-datasets/"> Free Datasets download for Analytics | Download Datasets for Analytics</a> <br>
-        <a href=" https://www.mygreatlearning.com/blog/free-download-datasets/#optin-monster-shortcode-idon5zeo6dhlsfvucxew7y"> Free Datasets download for Analytics | Download Datasets for Analytics </a> <br>
+        <a href=" https://www.mygreatlearning.com/blog/
+        free-download-datasets/#optin-monster-shortcode-idon5zeo6dhlsfvucxew7y"> Free Datasets download for Analytics | Download Datasets for Analytics </a> <br>
     
     <h2>YouTubeDownload:-</h2>
-        <a href="https://deturl.com/?url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dr5mi6iuZvUY%26t%3D11s%26ab_channel%3DTheJaipurDialogues">deturl.com - download videos from YouTube.</a> <br>
+        <a href="https://deturl.com/?url=https%3A%2F%2Fwww.youtube.c
+        om%2Fwatch%3Fv%3Dr5mi6iuZvUY%26t%3D11s%26ab_channel%3DTheJaipurDialogues">deturl.com - download videos from YouTube.</a> <br>
     <h2>birds</h2>
+        <a href="https://www.google.com/search?q=Indian++Great+Hornbill+
+        (Buceros+bicornis)+hd+images+free+download&tbm=isch&ved=2ahUKEwjs5b2Gup-BAxUE06ACHawiAdEQ2
+        -cCegQIABAA&oq=Indian++Great+Hornbill+(Buceros+bicornis)+hd+images+
+        free+download&gs_lcp=CgNpbWcQDDoECCMQJ1DPD1jUrgFgur0BaAFwAHgAgAHLAYgBpAS
+        SAQUwLjIuMZgBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=QWf9ZKzBH4Smg8U
+        PrMWEiA0&bih=664&biw=1318&hl=en#imgrc=aRIhm1DohP-dnM">
+            Indian Great Hornbill (Buceros bicornis) hd images free download - Google Search</a><br>
+        <a href="">20 Different Types of Birds with Pictures Name | Whizzed Net</a><br>
     <h2>Dr Lu Udemy reminder of python code</h2>
     <h2>freecodecamp_courses</h2>
     <h2>Datanerd</h2>
