Dr Lu Udemy reminder of python code

--- a/main/index.html
+++ b/main/index.html
@@ -63,6 +63,14 @@
             Indian Great Hornbill (Buceros bicornis) hd images free download - Google Search</a><br>
         <a href="">20 Different Types of Birds with Pictures Name | Whizzed Net</a><br>
     <h2>Dr Lu Udemy reminder of python code</h2>
+    <a href=""></a><br>
+        <a href="https://appbrewery.com/courses/legacy-complete-web-development-course/lectures/46570079"> Introduction to HTML | The App Brewery</a><br>
+        <a href="https://app.auditorium.ai/courses/eelyNMYJKXeNJAbjssSEQz0m88XvnhX6"> Auditorium </a><br>
+        <a href="https://www.udemy.com/course/100-days-of-code/learn/lecture/19846936#notes">100 Days of Code: The Complete Python Pro Bootcamp for 2023 | Udemy</a><br>
+        <a href="https://www.udemy.com/course/100-days-of-code/learn/lecture/19658870#notes">100 Days of Code: The Complete Python Pro Bootcamp for 2023 | Udemy</a><br>
+        <a href="https://www.udemy.com/course/100-days-of-code/learn/lecture/19846780#notes">100 Days of Code: The Complete Python Pro Bootcamp for 2023 | Udemy</a><br>
+    
+    
     <h2>freecodecamp_courses</h2>
     <h2>Datanerd</h2>
     <h2>frontend---needed for frontend dev</h2>
