--- a/main/index.html
+++ b/main/index.html
@@ -79,7 +79,69 @@
         <a href="https://www.freecodecamp.org/fccb4f26fb5-5a84-4a0c-a31e-511d93960d73">Profile | freeCodeCamp.org</a><br>
     
     <h2>Datanerd</h2>
+        <a href="https://www.datanerd.tech/">Skills </a><br>
     <h2>frontend---needed for frontend dev</h2>
+    Pricing - Vercel
+    <a href="https://vercel.com/pricing"></a><br>
+    Your Career in Web Development Starts Here | The Odin Project
+    https://www.theodinproject.com/
+    The 14 best colour tools for web designers in 2023 | Creative Bloq
+    <a href="https://www.creativebloq.com/advice/the-best-colour-tools-for-web-designers"></a><br>
+    CSS Reference
+    <a href="https://www.w3schools.com/cssref/index.php"></a><br>
+    Example HTML Website
+    <a href="https://appbrewery.github.io/just-add-css/"></a><br>
+    CSS Box Model
+    <a href="https://appbrewery.github.io/box-model/"></a><br>
+    Pesticide for Chrome - Chrome Web Store
+    <a href="https://chrome.google.com/webstore/detail/pesticide-for-chrome/bakpbgckdnepkmkeaiomhmfcnejndkbi"></a><br>
+    Configuring a publishing source for your GitHub Pages site - GitHub Docs
+    <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site"></a><br>
+    Croissant One - Google Fonts
+    <a href="https://fonts.google.com/specimen/Croissant+One?preview.text=Hello%20World&preview.text_type=custom"></a><br>
+    RGB Mixer - Computer Science Field Guide
+    <a href="https://www.csfieldguide.org.nz/en/interactives/rgb-mixer/"></a><br>
+    Color Palettes for Designers and Artists - Color Hunt
+    <a href="https://colorhunt.co/"></a><br>
+    HTML & CSS - Coding Thai
+    <a href="https://www.codingthai.com/category/html-css/"></a><br>
+    HTML Emoji Reference
+    <a href="https://www.w3schools.com/charsets/ref_emoji.asp"></a><br>
+    Technical Documentation Project (Techgeekbuzz)
+    <a href="https://codepen.io/vinay-khatri/pen/bGKdBXx"></a><br>
+    Tribute Page(techgeekbuzz.com html project)
+    <a href="https://codepen.io/vinay-khatri/pen/jOzjodR"></a><br>
+    GitHub Pages | Websites for you and your projects, hosted directly from your GitHub repository. Just edit, push, and your changes are live.
+    <a href="https://pages.github.com/"></a><br>
+    Your projects
+    <a href="https://github.com/Kobra420?tab=projects"></a><br>
+    Quickstart for Projects - GitHub Docs
+    <a href="https://docs.github.com/en/issues/planning-and-tracking-with-projects/learning-about-projects/quickstart-for-projects"></a><br>
+    HTML Reference
+    <a href="https://www.w3schools.com/tags/default.asp"></a><br>
+    How to use onedrive for web hosting - YouTube
+    <a href="https://www.youtube.com/watch?v=YZsAhgXsZjM&ab_channel=TUTORIALSHOME"></a><br>
+    DriveToWeb - Host websites on Google Drive and Microsoft OneDrive
+    <a href="https://www.drv.tw/#how"></a><br>
+    Lorem Picsum - Images
+    <a href="https://picsum.photos/images"></a><br>
+    HTML <a> Tag
+    <a href="https://www.computerhope.com/jargon/h/html-a-tag.htm"></a><br>
+    MDN Web Docs
+    <a href="https://developer.mozilla.org/en-US/"></a><br>
+    WordPress Developer Resources | Official WordPress Developer Resources
+    <a href="https://developer.wordpress.org/"></a><br>
+    Codejet.ai™ - jet speed design-to-code transformation - using low-code
+    <a href="https://www.codejet.ai/?utm_source=www.superpowerdaily.com&utm_medium=referral&utm_campaign=is-chatgpt-becoming-lazier-and-dumber"></a><br>
+    <time>: The (Date) Time element - HTML: HyperText Markup Language | MDN
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/time"></a><br>
+    Learn html in Y Minutes
+    <a href="https://learnxinyminutes.com/docs/html/"></a><br>
+    HTML Editors
+    <a href="https://www.w3schools.com/html/html_editors.asp"></a><br>
+    Free Design Tool for Websites, Product Design & More | Figma
+    <a href="https://www.figma.com/design/"></a><br>
+    
     <h2>my sorted Ais</h2>
     <h2>Chat GPT alternative Ais</h2>
     <h2>asia.wargaming.net</h2>
