YT videos on possibilities of AIs

--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>My collections at MS edge</h1>
+    <h2>YouTube videos on possibilities of AIs</h2>
+        <a href="https://www.youtube.com/@FuturAiExplorers/videos">FuturAiExplorers/videos</a><br>
+        <a href="https://www.youtube.com/watch?v=vhisLPIOFJo">Jobs disappear after AI revolution in Future</a><br>
     <h2>Rockfellar Bio</h2>
         <a href="https://www.youtube.com/watch?v=uvNkdAggUGU">Discord: The Most Evil Business In The World - YouTube</a> <br>
         <a href="https://www.youtube.com/watch?v=XnRDE854dDY">People Are Becoming Millionaires From Snapchat... THIS Is How</a> <br>
