--- a/main/index.html
+++ b/main/index.html
@@ -189,6 +189,16 @@
         <a href="https://app.writesonic.com/template/8e83cd36-8786-4d4d-93f4-9e9e8410b8e0/chatsonic/25892d1d-7b84-42c8-aa79-35124ac9aa36?l_h=undefined">Chatsonic | Writesonic</a><br> <br>        
         <a href="https://www.perplexity.ai/">Perplexity AI</a><br> <br> <br>
     <h2>scraping</h2>
+        
+        <a href="https://www.bing.com/search?pglt=163&q=install+scrapy+on+windows+via+pip+install&cvid=9e630747a9674c119c723b2faa4d4540&aqs=edge..69i57j0l8.36014j0j1&FORM=ANNTA1&PC=U531">install scrapy on windows via pip install - Search</a><br>  <br>
+        <a href="https://medium.com/@admond1994/quick-guide-to-install-scrapy-to-windows-os-62fbcf95533c">Quick Guide To Install Scrapy to Windows OS | by Admond Lee | Medium</a><br>  <br>
+        <a href="https://towardsdatascience.com/four-types-of-parameters-and-two-types-of-arguments-in-python-357ccfdea3db#:~:text=In%20Python%2C%20we%20can%20define,when%20we%20call%20this%20function.">Four Types of Parameters and Two Types of Arguments in Python | by Christopher Tao | Towards Data Science</a><br>  <br>
+        <a href="https://levelup.gitconnected.com/6-pythonic-ways-to-replace-if-else-statements-fb5e678463ed">6 Pythonic Ways to Replace if-else Statements | by Bobby | Level Up Coding</a><br>  <br>
+        <a href="https://www.youtube.com/results?search_query=instagram+bot+using+python+selenium">instagram bot using python selenium - YouTube</a><br>  <br>
+        <a href="https://selenium-python.readthedocs.io/locating-elements.html#locating-elements-by-class-name">4. Locating Elements — Selenium Python Bindings 2 documentation</a><br>  <br>
+        <a href="https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/">Microsoft Edge WebDriver - Microsoft Edge Developer</a><br> <br>
+
+        
     <h2>coding challenges</h2>
     <h2>#1 Coding Python</h2>
     <h2>#2 pythonExercise</h2>
