--- a/main/index.html
+++ b/main/index.html
@@ -219,6 +219,174 @@
                 <a href="https://leetcode.com/login/ ">login - LeetCode Profile</a><br> <br>
 
     <h2>#1 Coding Python</h2>
+    Python pass statement: When, why, and how to use it – LearnDataSci
+    https://www.learndatasci.com/solutions/python-pass/
+    Functions in Python | Types, Example - Scientech Easy
+    https://www.scientecheasy.com/2022/11/functions-in-python.html/
+    Awesome Python
+    https://awesome-python.com/#data-analysis
+    Intellipaat Community
+    https://intellipaat.com/community/siginup
+    Python Tutorial - A Step-by-Step Guide for Beginners
+    https://intellipaat.com/blog/tutorial/python-tutorial/
+    Best Online Free Programming Courses - Intellipaat Academy
+    https://intellipaat.com/academy/course-cat/programming/
+    Confirm Email | The App Brewery
+    https://www.appbrewery.co/p/confirm-email-prompt?email=banti_edu26%40yahoo.com
+    The Ultimate Boolean in Python Tutorial for 2021
+    https://www.simplilearn.com/tutorials/python-tutorial/boolean-in-python
+    Python File Open
+    https://www.w3schools.com/python/python_file_handling.asp
+    Paid Plans | Codecademy
+    https://www.codecademy.com/pages/paid-plans
+    Search Results Page | Infosys Springboard
+    https://infyspringboard.onwingspan.com/web/en/app/search/learning?lang=en&q=Python&f=%7B%22contentType%22:%5B%22Course%22%5D%7D
+    Indentation in Python - GeeksforGeeks
+    https://www.geeksforgeeks.org/indentation-in-python/
+    The #1 Python Tutorial for Beginners // Edabit
+    https://edabit.com/tutorial/python
+    Solve Python | HackerRank
+    https://www.hackerrank.com/domains/python
+    ✅C++ || JAVA || PYTHON || Easy solution w/ Explanation 🔥🔥|| ✔️Beginner friendly - LeetCode Discuss
+    https://leetcode.com/problems/two-sum/discuss/2430588/C%2B%2B-oror-JAVA-oror-PYTHON-oror-Easy-solution-w-Explanation-oror-Beginner-friendly
+    Codewars - Achieve mastery through coding practice and developer mentorship
+    https://www.codewars.com/
+    Count Sort Algorithm | CodeWithHarry
+    https://www.codewithharry.com/videos/data-structures-and-algorithms-in-hindi-60/
+    Learn Python: Python in 80 Minutes for Beginners (2022) | Udemy
+    https://www.udemy.com/course/learn-python-in-80-minutes/learn/lecture/19504496#overview
+    Python For Loop Example – How to Write Loops in Python
+    https://www.freecodecamp.org/news/python-for-loop-example-how-to-write-loops-in-python/
+    Python Tutorials Archives Page 1 - By TechBeamers
+    https://www.techbeamers.com/python-programming-tutorials/
+    11 Powerful Methods to Iterate Through List in Python
+    https://www.pythonpool.com/python-iterate-through-list/
+    TCS iON Digital Learning Hub
+    https://learning.tcsionhub.in/iDH/India/Dashboard/Learner
+    My courses
+    https://digisaksham.azurewebsites.net/?source=NCS#/
+    Microsoft Digisaksham
+    https://www.ncs.gov.in/job-seeker/_layouts/15/NCSP/job-seeker/MCT_Digisaksham.aspx?U=tgj3zxH%2F69Pej0azdtCuEFRYlGy%2FpisO
+    GitHub on Microsoft Learn | Microsoft Docs
+    https://docs.microsoft.com/en-us/learn/github/
+    Getting started with GitHub - GitHub Docs
+    https://docs.github.com/en/get-started
+    Power Platform on Microsoft Learn | Microsoft Docs
+    https://docs.microsoft.com/en-us/learn/powerplatform/
+    Search Results Page | Infosys Springboard
+    https://infyspringboard.onwingspan.com/web/en/app/search/learning?lang=en&q=Python&f=%7B%22contentType%22:%5B%22Course%22%5D%7D
+    Course | DA0101EN | Cognitive Class
+    https://courses.cognitiveclass.ai/courses/course-v1:CognitiveClass+DA0101EN+v1/course/
+    Your Step-By-Step Roadmap to a Career in Tech | Zero To Mastery
+    https://zerotomastery.io/career-paths/
+    The collaborative browser based IDE - Replit
+    https://replit.com/
+    PY4E - Python for Everybody
+    https://www.py4e.com/
+    Book: Python for Everybody (Severance) - Engineering LibreTexts
+    https://eng.libretexts.org/Bookshelves/Computer_Science/Programming_Languages/Book%3A_Python_for_Everybody_(Severance)
+    Learning with Python – Green Tea Press
+    https://greenteapress.com/wp/learning-with-python/
+    PythonLearn - Exploring Data
+    http://www.py4inf.com/
+    8300+ Programming Languages Courses [2022] | Learn Online for Free | Class Central
+    https://www.classcentral.com/subject/programming-languages
+    Python Module Index — Python 3.10.7 documentation
+    https://docs.python.org/3/py-modindex.html
+    Python Basic Exercise for Beginners with Solutions
+    https://pynative.com/python-basic-exercise-for-beginners/
+    Python Basic: Exercises, Practice, Solution - w3resource
+    https://www.w3resource.com/python-exercises/python-basic-exercises.php
+    35 Python Programming Exercises and Solutions – Pythonista Planet
+    https://pythonistaplanet.com/python-programming-exercises-and-solutions/
+    RESOLVED TypeError: list object is not callable in Python
+    https://tutorialdeep.com/knowhow/resolve-list-object-is-not-collable-python/
+    Python Guides - Python Tutorials
+    https://pythonguides.com/
+    Dictionaries in Python – Real Python
+    https://realpython.com/python-dicts/#:~:text=Dictionaries%20are%20Python%E2%80%99s%20implementation%20of%20a%20data%20structure,key-value%20pairs%20in%20curly%20braces%20%28%20%7B%7D%20%29.
+    Data Analyst Salary in India | AmbitionBox
+    https://www.ambitionbox.com/profile/data-analyst-salary
+    Built-in Functions — Python 3.10.7 documentation
+    https://docs.python.org/3/library/functions.html#round
+    Prime Numbers In a Given Range in Python | Prepinsta
+    https://prepinsta.com/python-program/prime-numbers-in-a-given-range/#:~:text=Working%3A%201%20Start%202%20Take%20two%20user%20input,loop%2C%20then%20print%2C%20%E2%80%9CPrime%20Number%20i.%E2%80%9D%207%20Stop
+    Python Program to Check Prime Number
+    https://www.programiz.com/python-programming/examples/prime-number
+    Python Arguments with Syntax and Examples - Python Geeks
+    https://pythongeeks.org/python-arguments/
+    12 Examples to Master Python Dictionaries | by Soner Yıldırım | Towards Data Science
+    https://towardsdatascience.com/12-examples-to-master-python-dictionaries-5a8bcd688c6d
+    Beginners Guide to Python: Tutorials, References and Examples
+    https://www.toppr.com/guides/python-guide/
+    Python Courses - Python Morsels
+    https://www.pythonmorsels.com/courses/
+    Python len() function
+    https://www.codesdope.com/blog/article/python-len-function/
+    Learn the Python len() Function. A detailed guide to the len() function… | by Tanu N Prabhu | Level Up Coding
+    https://levelup.gitconnected.com/learn-the-python-len-function-49b20bb8edd9
+    Python len()
+    https://www.programiz.com/python-programming/methods/built-in/len
+    Python 3 Notes: Built-in Functions
+    https://sites.pitt.edu/~naraehan/python3/mbb10.html
+    • Discord | Profiles | User Settings
+    https://discord.com/channels/743099584242516037/1017088305260658770/1022160200225783808
+    Coding Rooms
+    https://app.codingrooms.com/management/courses/6387/classes/8480/assignments
+    AskPython - Python Tutorials for Beginners and Experienced Programmers
+    https://www.askpython.com/
+    Learn To Code For IoT With Python Essentials Course | Networking Academy
+    https://www.netacad.com/courses/programming/pcap-programming-essentials-python
+    PCEP
+    https://pythoninstitute.org/pcep
+    Edube Interactive :: Python Essentials - Part 1
+    https://edube.org/study/pe1
+    15 Hiring Managers Reveal If Python Certifications Are Worth It
+    https://www.dataquest.io/blog/python-certification/
+    Music Lessons | Voice Lessons | TakeLessons
+    https://takelessons.com/live/info
+    Building a portfolio - Python Crash Course, 2nd Edition
+    https://ehmatthes.github.io/pcc_2e/finding_employment/building_portfolio/#:~:text=How%20should%20you%20build%20a%20portfolio%3F%201%20Use,informative%20readme%20...%206%20Include%20meaningful%20tests%20
+    82 Python Projects with Source Code | Aman Kharwal
+    https://thecleverprogrammer.com/2021/02/14/82-python-projects-with-source-code/
+    thecleverprogrammer.com
+    thecleverprogrammer
+    https://thecleverprogrammer.com/
+    11 Tips for Building a Strong Data Science Portfolio With Python | LearnPython.com
+    https://learnpython.com/blog/11-tips-for-building-a-strong-data-science-portfolio-with-python/
+    Reeborg's world
+    https://reeborg.ca/index_en.html
+    diagrams.net
+    https://www.draw.io/index.html
+    Python Lists  |  Python Education  |  Google Developers
+    https://developers.google.com/edu/python/lists#for-and-in
+    Python Itertools Tutorial: Installation, Types, Examples
+    https://blog.quantinsti.com/itertools/#:~:text=Iterators%20and%20itertools%20in%20Python%20__iter__%20%28%29%20method,error%20once%20all%20the%20objects%20have%20been%20tracked.
+    If-Then-Else in One Line Python – Finxter
+    https://blog.finxter.com/if-then-else-in-one-line-python/#:~:text=Yes%2C%20you%20can%20write%20most%20if%20statements%20in,if%2042%20in%20range%20%28100%29%20else%20print%20%28%2221%22%29.
+    How to use python if else in one line with examples | GoLinuxCloud
+    https://www.golinuxcloud.com/python-if-else-one-line/
+    ioDraw Diagram Software for Flowchart, Mind Map, Gantt, Whiteboard
+    https://www.iodraw.com/en/
+    Python Tutor code visualizer: Visualize code in Python, JavaScript, C, C++, and Java
+    https://pythontutor.com/visualize.html#mode=display
+    MUO - Technology, Simplified.
+    https://www.makeuseof.com/
+    Writing Our First Python Program — Introduction | Dataquest
+    https://app.dataquest.io/c/149/m/799/writing-our-first-python-program/1/introduction?path=2&slug=data-scientist
+    Data Analysis with Python Certification | freeCodeCamp.org
+    https://www.freecodecamp.org/learn/data-analysis-with-python/#data-analysis-with-python-course
+    Learn X in Y Minutes: Scenic Programming Language Tours
+    https://learnxinyminutes.com/
+    Mojo 🔥: Programming language for all of AI
+    https://www.modular.com/mojo
+    Coding Games and Programming Challenges to Code Better
+    https://www.codingame.com/start
+    Computing | Khan Academy
+    https://www.khanacademy.org/computing
+    Sololearn: Learn to Code
+    https://www.sololearn.com/
+    
     <h2>#2 pythonExercise</h2>
     <h2>LINUX</h2>
     <h2>Free Linux</h2>
