--- a/main/index.html
+++ b/main/index.html
@@ -304,6 +304,11 @@
                 <a href="https://www.sololearn.com/">Sololearn: Learn to Code</a><br> <br><br>
     
     <h2>#2 pythonExercise</h2>
+                <a href="https://profile.w3schools.com/log-in?redirect_url=https%3A%2F%2Fmy-learning.w3schools.com%2Ftutorial%2Fpython">Log in - W3Schools</a><br> <br>
+                <a href="https://www.geeksforgeeks.org/python-exercises-practice-questions-and-solutions/?ref=lbp">Python Exercises, Practice Questions and Solutions - GeeksforGeeks</a><br> <br>
+                <a href="https://pynative.com/python-basic-exercise-for-beginners/">Python Basic Exercise for Beginners with Solutions</a><br> <br>
+                <a href="https://programmingwithmosh.com/python/python-exercises-and-questions-for-beginners/">53 Python Exercises and Questions for Beginners (2018)</a><br> <br> <br>
+    
     <h2>LINUX</h2>
     <h2>Free Linux</h2>
     <h2>stack over flow</h2>
