--- a/main/index.html
+++ b/main/index.html
@@ -310,6 +310,10 @@
                 <a href="https://programmingwithmosh.com/python/python-exercises-and-questions-for-beginners/">53 Python Exercises and Questions for Beginners (2018)</a><br> <br> <br>
     
     <h2>LINUX</h2>
+                <a href="https://www.debian.org/intro/free">Debian -- What does free mean?</a><br> <br>
+                <a href="https://www.debian.org/releases/stable/amd64/index.en.html">Debian GNU/Linux Installation Guide</a><br> <br>
+                <a href="https://www.debian.org/download">Debian -- Thank you for downloading Debian!</a><br> <br> <br>
+    
     <h2>Free Linux</h2>
     <h2>stack over flow</h2>
     <h2>LinkedIn_Naukri</h2>
