--- a/main/index.html
+++ b/main/index.html
@@ -315,6 +315,31 @@
                 <a href="https://www.debian.org/download">Debian -- Thank you for downloading Debian!</a><br> <br> <br>
     
     <h2>Free Linux</h2>
+                <a href="https://ubuntu.com/">Enterprise Open Source and Linux | Ubuntu</a><br> <br>
+                <a href="https://linuxmint.com/">Home - Linux Mint</a><br> <br>
+                <a href="https://manjaro.org/">Manjaro</a><br> <br>
+                <a href="https://getfedora.org/">Fedora</a><br> <br>
+                <a href="https://elementary.io/">The thoughtful, capable, and ethical replacement for Windows and macOS ⋅ elementary OS</a><br> <br>
+                <a href="https://zorin.com/os/">Zorin OS - Make your computer better.</a><br> <br>
+                <a href="https://archlinux.org/">Arch Linux</a><br> <br>
+                <a href="https://www.adminschoice.com/download-linux-top-10-free-linux-distributions-for-desktop-and-servers">Download Linux : Top 10 Free Linux Distributions</a><br> <br>
+                <a href="https://pop.system76.com/">Pop!_OS by System76</a><br> <br>
+                <a href="https://www.centos.org/">The CentOS Project</a><br> <br>
+                <a href="https://www.opensuse.org/">openSUSE - Linux OS. The makers' choice for sysadmins, developers and desktop users.</a><br> <br>
+                <a href="https://www.makeuseof.com/tag/6-lightweight-linux-distributions-give-pc-lease-life/">10 Lightweight Linux Distributions to Give Your Old PC New Life</a><br> <br>
+                <a href="https://www.bodhilinux.com/">Bodhi: The Enlightened Linux Distribution</a><br> <br>
+                <a href="http://www.porteus.org/">Home - Porteus - Portable Linux</a><br> <br>
+                <a href="https://puppylinux-woof-ce.github.io/">Puppy Linux Home</a><br> <br>
+                <a href="https://www.slitaz.org/en/">SliTaz GNU/Linux (en)</a><br> <br>
+                <a href="http://www.tinycorelinux.net/downloads.html">Downloads Tiny Core Linux</a><br> <br>
+                <a href="https://www.parrotsec.org/">Parrot Security</a><br> <br>
+                <a href="https://sourceforge.net/projects/cyborghawk1/">cyborghawk v1.1 download | SourceForge.net</a><br> <br>
+                <a href="https://blackarch.org/">BlackArch Linux - Penetration Testing Distribution</a><br> <br>
+                <a href="https://devcount.com/linux-distros-hacking/">11 Best Linux Distros For Hacking And Penetration Testing in 2021 - dev.Count</a><br> <br>
+                <a href="https://www.makeuseof.com/best-linux-distros-for-penetration-testing/">The 8 Best Linux Distributions for Penetration Testing</a><br> <br>
+                <a href="https://linuxhint.com/most-secure-linux-distros-personal-use/">Top 10 Most Secure Linux Distros for Personal Use</a><br> <br>
+                <a href="https://www.kali.org/get-kali/#kali-live">Get Kali | Kali Linux</a><br> <br> <br>
+    
     <h2>stack over flow</h2>
     <h2>LinkedIn_Naukri</h2>
 amp;    <h2>IT Job seeking</h2>
