stack over flow

--- a/main/index.html
+++ b/main/index.html
@@ -341,6 +341,13 @@
                 <a href="https://www.kali.org/get-kali/#kali-live">Get Kali | Kali Linux</a><br> <br> <br>
     
     <h2>stack over flow</h2>
+                <a href="https://stackoverflow.com/questions/53690140/how-to-click-on-not-now-button-within-instagram-through-selenium-and-python">How to click on "Not Now" button within Instagram through Selenium and Python - Stack Overflow</a><br>
+                <a href="https://www.bing.com/search?pglt=163&q=can+not+get+xpath+from+button+in+selenium&cvid=dc7001dd0b5740eb9ac297a4882c10ea&aqs=edge..69i57j0l6.1478j0j1&FORM=ANNTA1&PC=U531">can not get xpath from button in selenium - Search</a><br>
+                <a href="https://www.bing.com/search?pglt=163&q=can+not+automate+instagram+not+not+now+button+after+login+in+selenium&cvid=f8002a9b4b4f46a7938e3d2efe0b9099&aqs=edge..69i57.42935j0j1&FORM=ANNTA1&PC=U531">can not automate instagram not not now button after login in selenium - Search</a><br>
+                <a href="https://stackoverflow.com/questions/71365880/unable-to-locate-3rd-div-element">selenium - Unable to locate 3rd div element - Stack Overflow</a><br>
+                <a href="https://stackoverflow.com/questions/63121107/selenium-click-on-button-by-class-name">python - Selenium click on button by class name - Stack Overflow</a><br>
+                <a href="https://stackoverflow.com/questions/69280023/cant-find-a-button-with-selenium">python - Can't find a button with Selenium - Stack Overflow</a><br> <br>
+    
     <h2>LinkedIn_Naukri</h2>
 amp;    <h2>IT Job seeking</h2>
     <h2>CV Maker zety</h2>
