--- a/main/index.html
+++ b/main/index.html
@@ -349,7 +349,19 @@
                 <a href="https://stackoverflow.com/questions/69280023/cant-find-a-button-with-selenium">python - Can't find a button with Selenium - Stack Overflow</a><br> <br>
     
     <h2>LinkedIn_Naukri</h2>
-amp;    <h2>IT Job seeking</h2>
+                <a href="https://www.linkedin.com/signup/cold-join?session_redirect=https%3A%2F%2Fwww%2Elinkedin
+                %2Ecom%2Fpayments%2Fpurchase%3F_cartId%3D7627666083%26optionCartId%3D7627666073%26isNewChooser%3D
+                true%26destRedirectURL%3Dhttp%253A%252F%252Fwww%252Elinkedin%252Ecom%252Fpremium%252Fwelcome-flow
+                %252F%253FreceiptUrl%253Dhttps%25253A%25252F%25252Fwww%25252Elinkedin%25252Ecom%25252Fpayments%25
+                252Fpurchasehistory%2526doneUrl%253Dhttps%25253A%25252F%25252Fwww%25252Elinkedin%25252Ecom%25252F
+                jobs%25252Fcollections%25252Frecommended%25252F%25253FcurrentJobId%25253D3073120932%252526s
+                howPremiumWelcomeBanner%25253Dtrue%26trkInfo%3DorderId%253A7627666083%252CoptionCartId%253A7627
+                666073%26trk%3Dpremium_job_details_upsell_job_poster&trk=login_reg_redirect">www.linkedin.com</a><br>
+                <a href="https://resume.naukri.com/subscription-product">resume.naukri.com</a><br>
+                <a href="https://www.naukri.com/mnjuser/profile?id=&altresid">www.naukri.com</a><br>
+                <a href="https://www.ambitionbox.com/interviews?campaign=desktop_nav">4 Lakh+ Interview Questions and Answers | Interview Preparation| AmbitionBox | AmbitionBox</a><br>
+    
+    <h2>IT Job seeking</h2>
     <h2>CV Maker zety</h2>
     <h2>English</h2>
     <h2>jio_admn_ip</h2>
