--- a/main/index.html
+++ b/main/index.html
@@ -362,6 +362,12 @@
                 <a href="https://www.ambitionbox.com/interviews?campaign=desktop_nav">4 Lakh+ Interview Questions and Answers | Interview Preparation| AmbitionBox | AmbitionBox</a><br>
     
     <h2>IT Job seeking</h2>
+                <a href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit">Feed | LinkedIn</a><br> <br>
+                <a href="https://www.linkedin.com/search/results/all/?keywords=consultant&origin=AUTO_COMPLETE&position=3&searchId=8dbe5b6e-3d9b-4900-a57c-b6c3483e7e54">"consultant" | Search | LinkedIn</a><br> <br>
+                <a href="https://www.linkedin.com/jobs/search/?keywords=consultant+junior&distance=25%2E0&geoId=111795395&origin=JOBS_HOME_SEARCH_CARDS">consultant junior Jobs | LinkedIn</a><br> <br>
+                <a href="https://www.linkedin.com/learning/search?difficultyLevel=BEGINNER&keywords=ms%20excel">ms excel: Online Courses, Training and Tutorials on LinkedIn Learning</a><br> <br>
+                <a href="https://www.ambitionbox.com/interviews?campaign=desktop_nav">4 Lakh+ Interview Questions and Answers | Interview Preparation| AmbitionBox | AmbitionBox</a><br> <br> <br>
+    
     <h2>CV Maker zety</h2>
     <h2>English</h2>
     <h2>jio_admn_ip</h2>
