--- a/main/index.html
+++ b/main/index.html
@@ -369,6 +369,12 @@
                 <a href="https://www.ambitionbox.com/interviews?campaign=desktop_nav">4 Lakh+ Interview Questions and Answers | Interview Preparation| AmbitionBox | AmbitionBox</a><br> <br> <br>
     
     <h2>CV Maker zety</h2>
+                <a href="https://builder.zety.com/dashboard">builder.zety.com</a><br> <br>
+                <a href="https://app.tealhq.com/job-tracker/3b4dde1d-f2b6-4a03-a9bb-be2307525878">Teal - Job Tracker</a><br> <br>
+                <a href="https://www.tealhq.com/post/great-chatgpt-prompts-for-your-resume">21 Great ChatGPT Prompts for Your Resume</a><br> <br>
+                <a href="https://resumegenius.com/blog/cover-letter-help/chatgpt-cover-letter#:~:text=Whenever%20possible%2C%20include%20these%20details%20while%20you%E2%80%99re%20telling,as%20two%20of%20my%20top%20skills.%E2%80%9D%29%20More%20items">Making a Chat GPT Cover Letter: The Good, Bad, & Ugly</a><br> <br>
+                <a href="https://www.linkedin.com/jobs/search/?currentJobId=3589670308&f_E=2&keywords=python%20data%20analyst">(58) python data analyst Jobs | LinkedIn</a><br> <br> <br>
+    
     <h2>English</h2>
     <h2>jio_admn_ip</h2>
     <h2>partition&os install</h2>
