--- a/main/index.html
+++ b/main/index.html
@@ -376,6 +376,11 @@
                 <a href="https://www.linkedin.com/jobs/search/?currentJobId=3589670308&f_E=2&keywords=python%20data%20analyst">(58) python data analyst Jobs | LinkedIn</a><br> <br> <br>
     
     <h2>English</h2>
+                <a href="https://www.bing.com/search?q=define+lickspittle&FORM=DCTRQY&cc=US&setlang=en-US&cvid=98ffbd3979ab489a9eaafaf8428620eb&qs=SC&nclid=14980CDE88072787EF2759424824154D&ts=1687159331158">define lickspittle - Search</a><br> <br>
+                <a href="https://www.merriam-webster.com/thesaurus/servile#">27 Synonyms &amp; Antonyms of SERVILE | Merriam-Webster Thesaurus</a><br> <br>
+                <a href="https://www.bing.com/search?q=extremely+servile+people+adjectives&qs=n&form=QBRE&sp=-1&lq=0&pq=extremely+servile+people+adjectives%5C&sc=3-36&sk=&cvid=563DC70CBEF447899560A63BBE914A5A&ghsh=0&ghacc=0&ghpl=">extremely servile people adjectives - Search</a><br> <br>
+                <a href="https://www.bing.com/search?q=define+kowtower&FORM=DCTRQY&ntref=1">define kowtower - Search</a><br> <br> <br>
+
     <h2>jio_admn_ip</h2>
     <h2>partition&os install</h2>
     <h2>anaconda</h2>
