--- a/main/index.html
+++ b/main/index.html
@@ -389,6 +389,11 @@
                 <a href="https://www.partitionwizard.com/partitionmagic/windows-xp-iso-download.html#windows-xp-iso-download-4435">Free Download Windows XP ISO: Home &amp; Professional (32 &amp; 64 Bit)</a><br> <br>
     
     <h2>anaconda</h2>
+                <a href="https://www.anaconda.com/products/distribution/installation-success">Anaconda | Installation Success</a><br> <br>
+                <a href="https://anaconda.cloud/getting-started-with-anaconda-distribution?source=win_installer">Getting Started with Anaconda Individual Edition</a><br> <br>
+                <a href="https://anaconda.cloud/">Anaconda Nucleus</a><br> <br>
+                <a href="https://www.jetbrains.com/">JetBrains: Essential tools for software developers and teams</a><br> <br> <br>
+    
     <h2>Python download sites</h2>
     <h2>UDemy_Greatlearning sites</h2>
     <h2>amazon kindle</h2>
