Python download sites

--- a/main/index.html
+++ b/main/index.html
@@ -395,6 +395,13 @@
                 <a href="https://www.jetbrains.com/">JetBrains: Essential tools for software developers and teams</a><br> <br> <br>
     
     <h2>Python download sites</h2>
+                <a href="https://www.python.org/">Welcome to Python.org</a><br> <br>
+                <a href="https://www.jetbrains.com/pycharm/download/#section=windows">Download PyCharm: Python IDE for Professional Developers by JetBrains</a><br> <br>
+                <a href="https://code.visualstudio.com/docs/?dv=win64">Documentation for Visual Studio Code</a><br> <br>
+                <a href="https://docs.python.org/3.10/tutorial/index.html">The Python Tutorial — Python 3.10.5 documentation</a><br> <br>
+                <a href="https://docs.python.org/3.10/index.html">3.10.5 Documentation</a><br> <br>
+                <a href="https://docs.python.org/3.10/using/windows.html">4. Using Python on Windows — Python 3.10.5 documentation</a><br> <br> <br>
+
     <h2>UDemy_Greatlearning sites</h2>
     <h2>amazon kindle</h2>
     <h2>PAY AFTER JOB PROGRAMMS</h2>
