UDemy_Greatlearning sites

--- a/main/index.html
+++ b/main/index.html
@@ -403,6 +403,19 @@
                 <a href="https://docs.python.org/3.10/using/windows.html">4. Using Python on Windows — Python 3.10.5 documentation</a><br> <br> <br>
 
     <h2>UDemy_Greatlearning sites</h2>
+                <a href="https://www.mygreatlearning.com/great-lakes-pgpdsba-data-analytics?&utm_source=Google&utm_medium=Search&utm_campaign=6Cities_Exact_Data_Analytics_Search_New&adgroup_id=113833344363&campaign_id=11763139325&Keyword=%2Bdata%20%2Banalytics&placement=&utm_content=c&gclid=CjwKCAjwo8-SBhAlEiwAopc9W2skW3Isp-uWtRDoJDviCNefC9RpiuEsdM6GfN3F56FrhsOeIvfFlBoCRxQQAvD_BwE">Data Analytics Course [Learn from UT Austin &amp; Great Lakes' faculty] - Great Learning</a><br> <br>
+                <a href="https://www.udemy.com/">www.udemy.com</a><br> <br>
+                <a href="https://www.coursera.org/articles/how-to-become-a-data-analyst?isNewUser=true">How to Become a Data Analyst (with or Without a Degree) | Coursera</a><br> <br>
+                <a href="https://www.simplilearn.com/top-data-analysis-tools-article">Top 10 Data Analysis Tools for 2022</a><br> <br>
+                <a href="https://www.tutorialspoint.com/advanced_excel_charts/index.htm">Advanced Excel Charts Tutorial</a><br> <br>
+                <a href="https://www.w3schools.com/python/gloss_python_indentation.asp#:~:text=Indentation%20refers%20to%20the%20spaces,indicate%20a%20block%20of%20code.">Python Indentation</a><br> <br>
+                <a href="https://courses.w3schools.com/courses/python">Learn Python - W3Schools Courses</a><br> <br>
+                <a href="https://www.guru99.com/python-programming-certification.html#8">BEST Python Certification Exam in 2022</a><br> <br>
+                <a href="https://practice.geeksforgeeks.org/courses/Python-Foundation?utm_source=article&utm_medium=right-bar&utm_campaign=right-bar">Python Programming Foundation -Self Paced</a><br> <br>
+                <a href="https://www.udacity.com/online-learning-for-individuals?irclickid=ShNXjZS-ixyIWfrQtGQZjznDUkDw-tz2F2rdUQ0&irgwc=1&utm_source=affiliate&utm_medium=&aff=2391366&utm_term=&utm_campaign=_62c998303a7643.56677342_&utm_content=&adid=1356447">Online Courses Taught by Experts | Udacity</a><br> <br>
+                <a href="https://www.bitdegree.org/tutorials/what-is-python-used-for/">What is Python Used For? 7 Major Uses</a><br> <br>
+                <a href="https://www.bitdegree.org/online-learning-platforms">Best Online Learning Platforms 2022: MOOC Reviews &amp; Ratings</a><br> <br> <br>
+    
     <h2>amazon kindle</h2>
     <h2>PAY AFTER JOB PROGRAMMS</h2>
     <h2>hackanews</h2>
