--- a/main/index.html
+++ b/main/index.html
@@ -417,6 +417,12 @@
                 <a href="https://www.bitdegree.org/online-learning-platforms">Best Online Learning Platforms 2022: MOOC Reviews &amp; Ratings</a><br> <br> <br>
     
     <h2>amazon kindle</h2>
+                <a href="https://www.amazon.in/hz/mycd/digital-console/alldevices">Amazon.in: Manage Your Content and Devices</a><br> <br>
+                <a href="https://www.amazon.in/Python-All-One-Dummies-Shovic-ebook/dp/B091DGDLK8/ref=sr_1_1?_encoding=UTF8&keywords=Python+All-in-One+For+Dummies&qid=1655953377&s=digital-text&sr=1-1">Python All-in-One For Dummies 2nd Edition, Kindle Edition₹353.41</a><br> <br>
+                <a href="https://www.amazon.in/s?k=Python+All-in-One+For+Dummies&rh=n%3A1634753031&_encoding=UTF8">Amazon.in : Python All-in-One For Dummies</a><br> <br>
+                <a href="https://www.amazon.in/kindle-dbs/fd/kcp">www.amazon.in/kindle</a><br> <br>
+                <a href="https://www.amazon.in/dppui/pay-select?preferenceType=KindleUnlimited&transactionContext=Subscribe&clientId=redwood&collectShippingAddress=true&context=subscribe&acquisitionId=amzn1.dpps.payload.A3TSL2JGSD5B0R.08aaeec0-2717-486f-8aa0-65246939989e&variant=ku&_token=gI6KFlxeonPE95V%2FekHjt8peqqv2ET0aP8ATcacAAAAMAAAAAGKz3iRyYXcAAAAA&ref=ku_sp_rw_pf">Your Payment Settings</a><br> <br> <br>
+    
     <h2>PAY AFTER JOB PROGRAMMS</h2>
     <h2>hackanews</h2>
     <h2>free NAS</h2>
