--- a/main/index.html
+++ b/main/index.html
@@ -348,7 +348,7 @@
                 <a href="https://stackoverflow.com/questions/63121107/selenium-click-on-button-by-class-name">python - Selenium click on button by class name - Stack Overflow</a><br>
                 <a href="https://stackoverflow.com/questions/69280023/cant-find-a-button-with-selenium">python - Can't find a button with Selenium - Stack Overflow</a><br> <br>
     
-    <h2>LinkedIn_Naukri</h2>
+    <h2>LinkedIn_Naukri <img src="" alt=""></h2>
                 <a href="https://www.linkedin.com/signup/cold-join?session_redirect=https%3A%2F%2Fwww%2Elinkedin
                 %2Ecom%2Fpayments%2Fpurchase%3F_cartId%3D7627666083%26optionCartId%3D7627666073%26isNewChooser%3D
                 true%26destRedirectURL%3Dhttp%253A%252F%252Fwww%252Elinkedin%252Ecom%252Fpremium%252Fwelcome-flow
