PAY AFTER JOB PROGRAMMS

--- a/main/index.html
+++ b/main/index.html
@@ -424,6 +424,10 @@
                 <a href="https://www.amazon.in/dppui/pay-select?preferenceType=KindleUnlimited&transactionContext=Subscribe&clientId=redwood&collectShippingAddress=true&context=subscribe&acquisitionId=amzn1.dpps.payload.A3TSL2JGSD5B0R.08aaeec0-2717-486f-8aa0-65246939989e&variant=ku&_token=gI6KFlxeonPE95V%2FekHjt8peqqv2ET0aP8ATcacAAAAMAAAAAGKz3iRyYXcAAAAA&ref=ku_sp_rw_pf">Your Payment Settings</a><br> <br> <br>
     
     <h2>PAY AFTER JOB PROGRAMMS</h2>
+                <a href="https://my.newtonschool.co/course/a8cblcp6ki/details/">Newton School</a><br> <br>
+                <a href="https://acciojob.com/">Acciojob : Full Stack Development Jobs paying ₹5 - 40 LPA | Pay After Placement | Pay only when you are hired</a><br> <br>
+                <a href="https://www.bing.com/search?q=pay+after+placement+programs+&form=ANNTH1&refig=112e3dd3c1f549a39e9e09d39fab8c82">pay after placement programs - Search</a><br> <br> <br>
+    
     <h2>hackanews</h2>
     <h2>free NAS</h2>
     <h2>wify file trnsfr</h2>
